<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center"
    tools:context="com.yzq.zxing.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <RadioGroup
        android:id="@+id/rgOperType"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/rbtnVirfiy">

        <RadioButton
            android:id="@+id/rbtnVirfiy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnVerify_text" />

        <RadioButton
            android:id="@+id/rbtnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rbtnCreate_text" />
    </RadioGroup>

    <Button
        android:id="@+id/btnScan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnScanText" />

    <EditText
        android:id="@+id/txtContent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autofillHints=""
        android:hint="@string/txtContent_hint"
        android:inputType=""
        android:scrollbars="vertical"/>

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCopy_Text" />

    <Button
        android:id="@+id/btnPaste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPaste_Text" />

    <CheckBox
        android:id="@+id/cbxWithLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cbxWithLogo_Text" />


    <Button
        android:id="@+id/btnCreateQrcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCreateQrcode_Text" />


    <ImageView
        android:id="@+id/imgQrcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:contentDescription="@string/imgQrcode_contentDescription" />


</LinearLayout>
